spire-istio-gateway/spire-grpc-ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: spire-istio-ingress
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http3
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 30000
      name: http
      protocol: HTTP
    hosts:
    - "*"
  - port:
      number: 30001
      name: tcp
      protocol: TCP
    hosts:
    - "*"
  - port:
      number: 30000
      name: http2
      protocol: HTTP2
    hosts:
    - "*"
  - port:
      number: 8081
      name: tcp-spire
      protocol: TCP
    hosts:
    - "*"
